[gd_scene load_steps=2 format=3 uid="uid://bn08n3vujde03"]

[ext_resource type="Script" path="res://Scripts/UI Scripts/OptionsUI.gd" id="1_k5oue"]

[node name="OptionsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k5oue")

[node name="PauseBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.807843, 0.592157, 0.843137)

[node name="PauseText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 40.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]PAUSED"

[node name="BackButton" type="Button" parent="."]
layout_mode = 2
offset_right = 33.0
offset_bottom = 31.0
text = "<---"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -74.0
offset_right = 230.0
offset_bottom = 75.0
grow_vertical = 2
alignment = 1

[node name="GraphicsOptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Graphics Options
"

[node name="SoundOptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sound Options
"

[node name="ControlOptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Control Options
"

[connection signal="button_down" from="BackButton" to="." method="_on_back_button_button_down"]
[connection signal="button_up" from="VBoxContainer/GraphicsOptionsButton" to="." method="_on_graphics_options_button_button_up"]
[connection signal="button_up" from="VBoxContainer/SoundOptionsButton" to="." method="_on_sound_options_button_button_up"]
[connection signal="button_up" from="VBoxContainer/ControlOptionsButton" to="." method="_on_control_options_button_button_up"]
